force-app/main/default/objects/Finance_Bus_Plan__c/Finance_Bus_Plan__c.object-meta.xml
<CustomObject>
    <description>Finance plan for bus builds</description>
    <label>Finance Bus Plan</label>
    <nameField>
        <label>Finance Bus Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Bus Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>