force-app/main/default/objects/Finance_Bus_Plan__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Finance Bus Plans</relationshipLabel>
    <relationshipName>Finance_Bus_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>