force-app/main/default/objects/Finance_Bus_Plan__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <formula>Bus__r.Current_Owner__r.Internal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Name</label>
    <type>Text</type>
</CustomField>