force-app/main/default/objects/Finance_Bus_Plan__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>Bus__r.Bus_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <type>Text</type>
</CustomField>