force-app/main/default/objects/Finance_Bus_Plan__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <formula>Bus__r.Style__c</formula>
    <label>Style</label>
    <type>Text</type>
</CustomField>